RESOLVED FIXED100308
Fix issues with filters and reflections
https://bugs.webkit.org/show_bug.cgi?id=100308
Summary Fix issues with filters and reflections
Simon Fraser (smfr)
Reported 2012-10-24 16:29:15 PDT
Fix issues with filters and reflections
Attachments
Patch (16.20 KB, patch)
2012-10-24 16:32 PDT, Simon Fraser (smfr)
krit: review+
webkit.review.bot: commit-queue-
Simon Fraser (smfr)
Comment 1 2012-10-24 16:32:35 PDT
WebKit Review Bot
Comment 2 2012-10-24 18:49:57 PDT
Comment on attachment 170507 [details] Patch Attachment 170507 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/14554469 New failing tests: css3/filters/composited-reflected.html
Dirk Schulze
Comment 3 2012-10-26 00:08:21 PDT
Comment on attachment 170507 [details] Patch LGTM. Please add your test to the TestExpectation files before landing.
Simon Fraser (smfr)
Comment 4 2012-10-30 22:04:34 PDT
Tim Horton
Comment 5 2013-01-16 02:58:27 PST
Comment on attachment 170507 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=170507&action=review > Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:2830 > + newLayer->copyFiltersFrom(layer); This needed an #if ENABLE(CSS_FILTERS) :D
Dirk Schulze
Comment 6 2013-01-16 22:46:10 PST
(In reply to comment #5) > (From update of attachment 170507 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=170507&action=review > > > Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:2830 > > + newLayer->copyFiltersFrom(layer); > > This needed an #if ENABLE(CSS_FILTERS) :D Did you fixed it already? Can you open a new bug if not please?
Tim Horton
Comment 7 2013-01-16 22:49:07 PST
(In reply to comment #6) > (In reply to comment #5) > > (From update of attachment 170507 [details] [details]) > > View in context: https://bugs.webkit.org/attachment.cgi?id=170507&action=review > > > > > Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:2830 > > > + newLayer->copyFiltersFrom(layer); > > > > This needed an #if ENABLE(CSS_FILTERS) :D > > Did you fixed it already? Can you open a new bug if not please? I did, in http://trac.webkit.org/changeset/139903. There are two more things broken, I'll post a patch for them shortly.
Note You need to log in before you can comment on or make changes to this bug.